--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -188,6 +188,22 @@
                                 <i class="bi bi-list-ul me-2"></i>Liste des Employés
                             </a></li>
                             <li><hr class="dropdown-divider"></li>
+                            <li><h6 class="dropdown-header">📊 Présence & Pointage</h6></li>
+                            <li><a class="dropdown-item" href="{{ url_for('employees.attendance_dashboard') }}">
+                                <i class="bi bi-table me-2"></i>Tableau de Présence
+                            </a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('employees.live_attendance') }}">
+                                <i class="bi bi-broadcast me-2"></i>Suivi Temps Réel
+                            </a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('employees.manual_attendance') }}">
+                                <i class="bi bi-pencil-square me-2"></i>Pointage Manuel
+                            </a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><h6 class="dropdown-header">📈 Analytics & Historiques</h6></li>
+                            <li><a class="dropdown-item" href="{{ url_for('employees.list_employees') }}">
+                                <i class="bi bi-person-lines-fill me-2"></i>Historiques Individuels
+                            </a></li>
+                            <li><hr class="dropdown-divider"></li>
                             <li><h6 class="dropdown-header">Module Paie</h6></li>
                             <li><a class="dropdown-item" href="{{ url_for('employees.payroll_dashboard') }}">
                                 <i class="bi bi-speedometer2 me-2"></i>Dashboard Paie
